// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards Descriptive Card Displays custom properties 1`] = `
<v-card-stub loaderheight="4" tag="div" class="descriptive-card align-center text-center rounded-lg mr-10 mb-10">
  <!---->
  <div class="d-flex justify-center pb-4">
    <icon-stub type="model-unsubscribe" size="60" color="primary" variant="base" fillopacity="1" class="d-block"></icon-stub>
  </div>
  <tooltip-stub contentclass="" maxwidth="auto" minwidth="auto !important" nudgeright="100px"></tooltip-stub>
  <tooltip-stub contentclass="" maxwidth="auto" minwidth="auto !important" nudgeright="100px"></tooltip-stub>
  <!---->
</v-card-stub>
`;

exports[`Cards Descriptive Card Displays custom slots 1`] = `
<v-card-stub loaderheight="4" tag="div" class="descriptive-card align-center text-center rounded-lg mr-10 mb-10">
  <div class="pa-3 pb-0">
    <div>Top spot</div>
  </div>
  <!---->
  <tooltip-stub contentclass="" maxwidth="auto" minwidth="auto !important" nudgeright="100px"></tooltip-stub>
  <tooltip-stub contentclass="" maxwidth="auto" minwidth="auto !important" nudgeright="100px"></tooltip-stub>
  <div class="px-3 pt-2">
    <p>Default content</p>
  </div>
</v-card-stub>
`;
